Improved language and added descriptions

--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
             <div class="about-layout">
                 <img src="/assets/img/profile-picture.jpeg" alt="About Me">
                 <div class="about-text">
-                    <p>Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. Proven track record in CAD/CAE design, FEA, and product lifecycle management. Seeking innovation-driven opportunities to develop high-performance mechanical systems.</p>
+                    <p>Hello! I’m a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. My strengths lie in Mechanical Design, FEA, and product lifecycle management. Armed with a master’s degree from one of the top engineering schools in France and mentorship from world leaders in robotics, I've developed the skills to tackle complex engineering challenges.</p>
+                    <p>My work spans vehicle geometry, chassis and machine design, and additive manufacturing, with a strong command of ISO standards in welding, sheet metal, and GD&T. Having lived and worked across multiple countries, I’m comfortable in diverse environments and fluent in both English and French.</p>
+                    <p>Outside of work, I’m a guitarist and a passionate fan of rock music and Formula 1.</p>
+                    <!--
+                    <p>Hello! I'm a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. Over the course of my career, I have earned a proven track record in Mechanical Design, FEA, and product lifecycle management. Armed with a master's degree from one of the leading engineering school in France, and having been mentored by some of the brightest minds in the field of robotics, I've accrued the experience to tackle head on even the most difficult engineering problems.</p>
+                    <p>I've worked with vehicle geometry, chassis design, machine design, and additive manufacturing. My expertise in these fields includes an extensive knowledge of current ISO standards for welding, sheet metal work, and GD&T. Having lived and worked in several different countries, I've navigated diverse working environments and have a professional grasp of both English and French.</p>
+                    <p>Outside of engineering, I'm a guitarist and a huge fan of rock and metal music. I'm also an avid follower of motorsports, especially Formula 1.</p>
+                    -->
                 </div>
             </div>
 
             <div class="skills-grid">
-                <div class="skill-column design" data-tooltip="CAD, modeling, and mechanical design tools.">
+                <div class="skill-column design" data-tooltip="My engineering toolbox consists of the latest industry standard CAD and FEA tools.">
                     <h3>Mechanical Design</h3>
                     <ul>
                         <li>SolidWorks + PDM</li>
@@ -60,7 +67,7 @@
                     </ul>
                 </div>
 
-                <div class="skill-column standards" data-tooltip="Engineering standards and best practices.">
+                <div class="skill-column standards" data-tooltip="My designs follow international engineering standards to ensure the highest quality.">
                     <h3>Standards</h3>
                     <div class="badge-container">
                         <span class="badge" data-tooltip="Framework for organizing GD&T standards.">ISO 14638</span>
@@ -72,17 +79,17 @@
                     </div>
                 </div>
 
-                <div class="skill-column coding" data-tooltip="Scripting and technical computing languages.">
+                <div class="skill-column coding" data-tooltip="Scientific programming languages to automoate tasks and handle large amounts of data.">
                     <h3>Programming</h3>
                     <ul>
                         <li>Python</li>
+                        <li>IronPython (ANSYS ACT)</li>
                         <li>MATLAB</li>
                         <li>Bash Scripting</li>
-                        <li>IronPython</li>
                     </ul>
                 </div>
 
-                <div class="skill-column lang" data-tooltip="Spoken and written communication skills.">
+                <div class="skill-column lang" data-tooltip="Spoken and written communication skills at a professional level.">
                     <h3>Languages</h3>
                     <ul>
                         <li>English – Fluent</li>
@@ -121,7 +128,7 @@
             <div class="portfolio">
 
                 <div class="portfolio-item">
-                    <a href="project-vitibot.html">
+                    <a href="/pages/projects/project-vitibot.html">
                         <img src="/assets/img/Ratio 3-2/BAKUS1.jpg" alt="VitiBot">
                         <div class="portfolio-title">VitiBot - Vineyard Robotics</div>
                     </a>
@@ -135,28 +142,28 @@
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="project-cnrs.html">
+                    <a href="/pages/projects/project-cnrs.html">
                         <img src="/assets/img/Ratio 3-2/TIRREX.PNG" alt="CNRS">
                         <div class="portfolio-title">TIRREX - XXL Robotics Platform</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="project-auto.html">
+                    <a href="/pages/projects/project-auto.html">
                         <img src="/assets/img/Ratio 3-2/FSAE.PNG" alt="FSAE">
                         <div class="portfolio-title">FSAE</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="project-auto.html">
+                    <a href="/pages/projects/project-auto.html">
                         <img src="/assets/img/Ratio 3-2/IKR_Iso.JPG" alt="IKR">
                         <div class="portfolio-title">Go-Karting</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="project-fsae.html">
+                    <a href="/pages/projects/project-3d-printing.html">
                         <img src="/assets/img/Ratio 3-2/Teeth.JPG" alt="3D Printing">
                         <div class="portfolio-title">3D Printing</div>
                     </a>
@@ -172,46 +179,46 @@
 
                 <div class="portfolio-wrapper">
                     <div class="portfolio-item">
-                        <a href="project-vitibot.html">
+                        <a href="/pages/services/service-mechanical.html">
                             <img src="/assets/img/Ratio 3-2/TurboSection2.png" alt="VitiBot">
                             <div class="portfolio-title">Mechanical Design</div>
                         </a>
                     </div>
                     <h3>Mechanical Design </h3>
-                    <p>Clean and modern designs tailored to your needs.</p>
+                    <p>Mechanical systems designed with a keen eye for detail. Welded structures, sheet metal, machined parts, and more.</p>
                 </div>
 
                 <div class="portfolio-wrapper">
                     <div class="portfolio-item">
-                        <a href="project-vitibot.html">
+                        <a href="/pages/services/service-fea.html">
                             <img src="/assets/img/Ratio 3-2/Hub_FEA.JPG" alt="VitiBot">
                             <div class="portfolio-title">Finite Element Analysis</div>
                         </a>
                     </div>
                     <h3>Finite Element Analysis </h3>
-                    <p>Intuitive and user-friendly interfaces for all devices.</p>
+                    <p>FEA simulations to validate designs, ensure structural soundness, and calculate fatigue life.</p>
                 </div>
 
                 <div class="portfolio-wrapper">
                     <div class="portfolio-item">
-                        <a href="project-vitibot.html">
+                        <a href="/pages/services/service-3d-printing.html">
                             <img src="/assets/img/Ratio 3-2/3d-printer.jpg" alt="VitiBot">
                             <div class="portfolio-title">Design for Additive Manufacturing</div>
                         </a>
                     </div>
                     <h3>Design for Additive Manufacturing </h3>
-                    <p>Unique brand identity and visual storytelling.</p>
+                    <p>Prototype parts designed keeping the limitations of the 3D printer in mind.</p>
                 </div>
 
                 <div class="portfolio-wrapper">
                     <div class="portfolio-item">
-                        <a href="project-vitibot.html">
+                        <a href="/pages/services/service-topology.html">
                             <img src="/assets/img/Ratio 3-2/chair4.png" alt="VitiBot">
                             <div class="portfolio-title">Topology Optimization</div>
                         </a>
                     </div>
                     <h3>Topology Optimization </h3>
-                    <p>Unique brand identity and visual storytelling.</p>
+                    <p>Visualisation of ideal stress paths to optimise designs.</p>
                 </div>
 
             </div>
@@ -227,7 +234,7 @@
 
                     <ul>
                         <li><strong>Phone:</strong> +33 07 54 19 78 07</li>
-                        <li><strong>Email:</strong> <a href="mailto:sudarson.nantha@outlook.com">sudarson.nantha@outlook.com</a></li>
+                        <li><strong>Email:</strong> <a href="mailto:sudarson@nanthac.com">sudarson@nanthac.com</a></li>
                         <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/snantha" target="_blank">/snantha</a></li>
                         <li><strong>Location:</strong> Reims, France</li>
                     </ul>
