--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> Sudarson Nanthacoumarane | Portfolio </title>
-
+    <link rel = "icon" type = "image/png" href = "/assets/img/logos/SN-logo.png">
     <!-- Import common page fonts and attributes -->
     <script>
         fetch('/partials/head.html?1')
@@ -44,9 +44,9 @@
             <div class="about-layout">
                 <img src="/assets/img/profile-picture.jpeg" alt="About Me">
                 <div class="about-text">
-                    <p>Hello! I’m a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. My strengths lie in Mechanical Design, FEA, and product lifecycle management. Armed with a master’s degree from one of the top engineering schools in France and mentorship from world leaders in robotics, I've developed the skills to tackle complex engineering challenges.</p>
+                    <p>Hello there! I’m Sudarson, a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. My strengths lie in Mechanical Design, FEA, and product lifecycle management. Armed with a master’s degree from one of the top engineering schools in France and mentorship from world leaders in robotics, I've developed the skills to tackle complex engineering challenges.</p>
                     <p>My work spans vehicle geometry, chassis and machine design, and additive manufacturing, with a strong command of ISO standards in welding, sheet metal, and GD&T. Having lived and worked across multiple countries, I’m comfortable in diverse environments and fluent in both English and French.</p>
-                    <p>Outside of work, I’m a guitarist and a passionate fan of rock music and Formula 1.</p>
+                    <p>Outside of work, I’m a guitarist, a passionate fan of rock music, and a Formula 1 enthusiast.</p>
                     <!--
                     <p>Hello! I'm a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. Over the course of my career, I have earned a proven track record in Mechanical Design, FEA, and product lifecycle management. Armed with a master's degree from one of the leading engineering school in France, and having been mentored by some of the brightest minds in the field of robotics, I've accrued the experience to tackle head on even the most difficult engineering problems.</p>
                     <p>I've worked with vehicle geometry, chassis design, machine design, and additive manufacturing. My expertise in these fields includes an extensive knowledge of current ISO standards for welding, sheet metal work, and GD&T. Having lived and worked in several different countries, I've navigated diverse working environments and have a professional grasp of both English and French.</p>
@@ -123,20 +123,20 @@
 
 
         <!-- Portfolio Section -->
-        <section id="portfolio" data-aos="fade-up">
+        <section id="portfolio" class="portfolio-section" data-aos="fade-up">
             <h2>Portfolio</h2>
             <div class="portfolio">
 
                 <div class="portfolio-item">
-                    <a href="/pages/projects/project-vitibot.html">
-                        <img src="/assets/img/Ratio 3-2/BAKUS1.jpg" alt="VitiBot">
+                    <a href="/pages/projects/project-vitibot.html?1">
+                        <img src="/assets/img/Ratio 3-2/BAKUS1.jpg?1" alt="VitiBot">
                         <div class="portfolio-title">VitiBot - Vineyard Robotics</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
                     <a href="/pages/projects/project-makara.html?1">
-                        <img src="/assets/img/Ratio 3-2/BikeSide.png" alt="Makara Cycles">
+                        <img src="/assets/img/Ratio 3-2/BikeSide.png?1" alt="Makara Cycles">
                         <div class="portfolio-title">Makara Cycles</div>
                     </a>
                 </div>
@@ -150,24 +150,33 @@
 
                 <div class="portfolio-item">
                     <a href="/pages/projects/project-auto.html">
-                        <img src="/assets/img/Ratio 3-2/FSAE.PNG" alt="FSAE">
-                        <div class="portfolio-title">FSAE</div>
-                    </a>
-                </div>
-
-                <div class="portfolio-item">
-                    <a href="/pages/projects/project-auto.html">
-                        <img src="/assets/img/Ratio 3-2/IKR_Iso.JPG" alt="IKR">
-                        <div class="portfolio-title">Go-Karting</div>
+                        <img src="/assets/img/Ratio 3-2/FSAE.PNG" alt="Motorsports">
+                        <div class="portfolio-title">Motorsports</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
                     <a href="/pages/projects/project-3d-printing.html">
-                        <img src="/assets/img/Ratio 3-2/Teeth.JPG" alt="3D Printing">
+                        <img src="/assets/img/Ratio 3-2/Prozeal 2.JPG" alt="3D Printing">
                         <div class="portfolio-title">3D Printing</div>
                     </a>
                 </div>
+
+                <div class="portfolio-item">
+                    <a href="/pages/projects/project-programming.html">
+                        <img src="/assets/img/Ratio 3-2/codeblur.png" alt="Scientific Programming">
+                        <div class="portfolio-title">Programming</div>
+                    </a>
+                </div>
+
+                <!--
+                <div class="portfolio-item">
+                    <a href="/pages/projects/project-programming.html">
+                        <img src="/assets/img/Ratio 3-2/kalki.png" alt="Kalki">
+                        <div class="portfolio-title">Kalki</div>
+                    </a>
+                </div>
+                -->
 
             </div>
         </section>
@@ -225,7 +234,7 @@
         </section>
 
 
-        <section id="contact" data-aos="fade-up">
+        <section id="contact" class="contact-section" data-aos="fade-up">
             <h2>Contact</h2>
             <div class="contact-wrapper">
                 <!-- Left: Contact Info -->
@@ -261,7 +270,7 @@
 
         <!-- Footer -->
         <footer>
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Sudarson Nanthacoumarane. All rights reserved.</p>
         </footer>
     </div>
 
@@ -271,7 +280,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
     <!-- Load main.js -->
-    <script src="/assets/js/main.js?1"></script>
+    <script src="/assets/js/main.js?4"></script>
 
 </body>
 </html>
