Updated About Me

--- a/index.html
+++ b/index.html
@@ -44,14 +44,9 @@
             <div class="about-layout">
                 <img src="/assets/img/profile-picture.jpeg" alt="About Me">
                 <div class="about-text">
-                    <p>Hello there! I’m Sudarson, a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. My strengths lie in Mechanical Design, FEA, and product lifecycle management. Armed with a master’s degree from one of the top engineering schools in France and mentorship from world leaders in robotics, I've developed the skills to tackle complex engineering challenges.</p>
+                    <p>Hello there! I’m Sudarson, a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. My strengths lie in Mechanical Design, FEA, and product lifecycle management. Armed with a master’s degree from one of the top engineering schools in France and mentorship from world leaders in robotics, I've developed the skills to tackle even the most complicated engineering challenges.</p>
                     <p>My work spans vehicle geometry, chassis and machine design, and additive manufacturing, with a strong command of ISO standards in welding, sheet metal, and GD&T. Having lived and worked across multiple countries, I’m comfortable in diverse environments and fluent in both English and French.</p>
                     <p>Outside of work, I’m a guitarist, a passionate fan of rock music, and a Formula 1 enthusiast.</p>
-                    <!--
-                    <p>Hello! I'm a Mechanical Engineer with 4+ years of R&D experience in robotics and automotive applications. Over the course of my career, I have earned a proven track record in Mechanical Design, FEA, and product lifecycle management. Armed with a master's degree from one of the leading engineering school in France, and having been mentored by some of the brightest minds in the field of robotics, I've accrued the experience to tackle head on even the most difficult engineering problems.</p>
-                    <p>I've worked with vehicle geometry, chassis design, machine design, and additive manufacturing. My expertise in these fields includes an extensive knowledge of current ISO standards for welding, sheet metal work, and GD&T. Having lived and worked in several different countries, I've navigated diverse working environments and have a professional grasp of both English and French.</p>
-                    <p>Outside of engineering, I'm a guitarist and a huge fan of rock and metal music. I'm also an avid follower of motorsports, especially Formula 1.</p>
-                    -->
                 </div>
             </div>
 
@@ -93,7 +88,7 @@
                     <h3>Languages</h3>
                     <ul>
                         <li>English – Fluent</li>
-                        <li>French – Intermediate</li>
+                        <li>French – Professional</li>
                         <li>Tamil – Native</li>
                     </ul>
                 </div>
