Working towards mobile friendly site

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/assets/css/main.css?2">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
@@ -24,6 +25,7 @@
     <div class="progress-container">
         <div class="progress-bar" id="scrollBar"></div>
     </div>
+
 
     <div id="sidebar-container"></div>
 
@@ -276,6 +278,8 @@
 
     <!-- Load main.js -->
     <script src="/assets/js/main.js?4"></script>
+    <script type="text/javascript" src="/assets/js/app.js" defer></script>
+
 
 </body>
 </html>
