--- a/pages/projects/project-vitibot.html
+++ b/pages/projects/project-vitibot.html
@@ -15,6 +15,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Import CSS  -->
     <link rel="stylesheet" href="/assets/css/main.css?2">
     <link rel="stylesheet" href="/assets/css/project.css?2">
