Mobile friendly project pages, updates to carousel

--- a/pages/projects/project-cnrs.html
+++ b/pages/projects/project-cnrs.html
@@ -50,13 +50,26 @@
                             </a>
                         </div>
 
+                        <div class="swiper-slide">
+                            <a href="/assets/img/Ratio 4-3/Handlebars.PNG" data-fancybox="project">
+                                <img src="/assets/img/Ratio 4-3/Handlebars.PNG" alt="Handlebars">
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a href="/assets/img/Ratio 4-3/med3.png" data-fancybox="project">
+                              <img src="/assets/img/Ratio 4-3/med3.png" alt="Med3">
+                            </a>
+                        </div>
+
+
                     </div>
 
                     <div class="swiper-pagination"></div>
-                    <!--
+                    
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
-                    -->
+                    
                 </div>
 
                 <div class="carousel-fade-overlay"></div>
