Project details update, margins, padding

--- a/pages/projects/project-auto.html
+++ b/pages/projects/project-auto.html
@@ -95,8 +95,8 @@
                 <p>During my time at university, I took part in several automotive and motorsports competitions. This was my first experience putting what I learned in class to practice, and the process of designing vehicles played an enormous part in helping me decide the course of my professional career.</p>
 
                 <div class="project-info">
-                    <p><strong>Roles:</strong>Team Captain, Vice Captain, Lead Designer, Chassis Designer</p>
-                    <p><strong>Tools:</strong>CATIA V5, CATIA Ergonomics Design & Analysis, Solidworks, Solidworks Simulation</p>
+                    <div class="info-line"><strong>Roles:</strong><span>Team Captain, Vice Captain, Lead Designer, Chassis Designer</span></div>
+                    <div class="info-line"><strong>Tools:</strong><span>CATIA V5, CATIA Ergonomics Design & Analysis, Solidworks, Solidworks Simulation</span></div>
                 </div>
 
                 <h3> Eco Kart 2016 </h3>
