Clean up and captions

--- a/pages/projects/project-auto.html
+++ b/pages/projects/project-auto.html
@@ -32,44 +32,44 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/EcokartTeam1.jpg" data-fancybox="project">
-                              <img src="/assets/img/Ratio 4-3/EcokartTeam1.jpg" alt="Hub Assembly">
+                            <a href="/assets/img/Ratio 4-3/EcokartTeam1.jpg" data-fancybox="project" data-caption="Team Eco Kart 2017">
+                              <img src="/assets/img/Ratio 4-3/EcokartTeam1.jpg" alt="Team Eco Kart 2017">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/FSAE.png?1" data-fancybox="project">
-                                <img src="/assets/img/Ratio 4-3/FSAE.png?1" alt="Dropouts">
+                            <a href="/assets/img/Ratio 4-3/FSAE.png?1" data-fancybox="project" data-caption="FSAE Chassis Design">
+                                <img src="/assets/img/Ratio 4-3/FSAE.png?1" alt="FSAE Chassis">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/Ecokart.png" data-fancybox="project">
-                              <img src="/assets/img/Ratio 4-3/Ecokart.png" alt="Med3">
+                            <a href="/assets/img/Ratio 4-3/Ecokart.png" data-fancybox="project" data-caption="Eco Kart 2017 rendered in CATIA V5">
+                              <img src="/assets/img/Ratio 4-3/Ecokart.png" alt="Eco Kart 2017 Render">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/Ecokart_Iso.png" data-fancybox="project">
-                              <img src="/assets/img/Ratio 4-3/Ecokart_Iso.png" alt="Med3">
+                            <a href="/assets/img/Ratio 4-3/Ecokart_Iso.png" data-fancybox="project" data-caption="Eco Kart 2017 design in CATIA V5">
+                              <img src="/assets/img/Ratio 4-3/Ecokart_Iso.png" alt="Eco Kart 2017 Design">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/IKR_Iso.jpg" data-fancybox="project">
-                                <img src="/assets/img/Ratio 4-3/IKR_Iso.jpg" alt="Handlebars">
+                            <a href="/assets/img/Ratio 4-3/IKR_Iso.jpg" data-fancybox="project" data-caption="IKR 2018 rendered in Solidworks">
+                                <img src="/assets/img/Ratio 4-3/IKR_Iso.jpg" alt="IKR 2018 Render">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/ISK_FEA.jpg" data-fancybox="project" data-caption="Bike Isometric View">
-                                <img src="/assets/img/Ratio 4-3/ISK_FEA.jpg" alt="Bike Iso">
+                            <a href="/assets/img/Ratio 4-3/ISK_FEA.jpg" data-fancybox="project" data-caption="ISK 2016 crash analysis in CATIA V5">
+                                <img src="/assets/img/Ratio 4-3/ISK_FEA.jpg" alt="ISK 2016 FEA">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/ESVC_Iso.jpg" data-fancybox="project" data-caption="Bike Isometric View">
-                                <img src="/assets/img/Ratio 4-3/ESVC_Iso.jpg" alt="Bike Iso">
+                            <a href="/assets/img/Ratio 4-3/ESVC_Iso.jpg" data-fancybox="project" data-caption="ESVC 2017 rendered in CATIA V5">
+                                <img src="/assets/img/Ratio 4-3/ESVC_Iso.jpg" alt="ESVC 2017 Render">
                             </a>
                         </div>
 
