--- a/pages/projects/project-makara.html
+++ b/pages/projects/project-makara.html
@@ -33,37 +33,37 @@
                     <div class="swiper-wrapper">
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/BikeIso.png" data-fancybox="project" data-caption="Bike Isometric View">
+                            <a href="/assets/img/Ratio 4-3/BikeIso.png" data-fancybox="project" data-caption="Makara Switch - L">
                                 <img src="/assets/img/Ratio 4-3/BikeIso.png" alt="Bike Iso">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/HubAssy.png" data-fancybox="project">
+                            <a href="/assets/img/Ratio 4-3/HubAssy.png" data-fancybox="project" data-caption="Rear Hub Assembly">
                               <img src="/assets/img/Ratio 4-3/HubAssy.png" alt="Hub Assembly">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/Handlebars.PNG" data-fancybox="project">
+                            <a href="/assets/img/Ratio 4-3/Handlebars.PNG" data-fancybox="project" data-caption="Road Bike Handlebars">
                                 <img src="/assets/img/Ratio 4-3/Handlebars.PNG" alt="Handlebars">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/med3.png" data-fancybox="project">
+                            <a href="/assets/img/Ratio 4-3/med3.png" data-fancybox="project" data-caption="Makara Switch - M">
                               <img src="/assets/img/Ratio 4-3/med3.png" alt="Med3">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/Dropouts.png" data-fancybox="project">
+                            <a href="/assets/img/Ratio 4-3/Dropouts.png" data-fancybox="project" data-caption="Custom weldable dropouts">
                                 <img src="/assets/img/Ratio 4-3/Dropouts.png" alt="Dropouts">
                             </a>
                         </div>
 
                         <div class="swiper-slide">
-                            <a href="/assets/img/Ratio 4-3/Wheel_Patent.jpg" data-fancybox="project">
+                            <a href="/assets/img/Ratio 4-3/Wheel_Patent.jpg" data-fancybox="project" data-caption="Patent drawing for modular bicycle hub">
                               <img src="/assets/img/Ratio 4-3/Wheel_Patent.jpg" alt="Wheel Patent">
                             </a>
                         </div>
