First draft of Portfolio section

--- a/pages/projects/project-motorsports.html
+++ b/pages/projects/project-motorsports.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Sudarson Nanthacoumarane | Automotive Projects</title>
+    <title>Sudarson Nanthacoumarane | Motorsports Projects</title>
 
     <!-- Import common page fonts and attributes -->
     <script>
@@ -89,7 +89,7 @@
             <!-- Project Details -->
             <div class="project-details">
                 <div class="project-heading">
-                    <h2>Automotive Projects</h2>
+                    <h2>Motorsports Projects</h2>
                 </div>
 
                 <p>During my time at university, I took part in several automotive and motorsports competitions. This was my first experience putting what I learned in class to practice, and the process of designing vehicles played an enormous part in helping me decide the course of my professional career.</p>
